Handle parallel processing of discovery URLs in batches to prevent memory issues